Align content correct in center page

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body {
 }
 
 #pageContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: absolute;
     top: 50%;
     left: 50%;
